# trabalho-final-extra_trabalho_compiladores

./: README.md  demo.py  pyproject.toml  requirements.txt
exemplos/: complex_example.py  dead_code_1.py  dead_code_2.py  dead_code_3.py
src/deadcode_detector/: __init__.py  __main__.py  analyzer.py  lexer.py  main.py  parser.py  reporter.py
src/deadcode_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_analyzer.py
